# egui_inspect

./: Cargo.toml
egui_example/: Cargo.toml
egui_example/src/: main.rs
egui_inspect/: Cargo.toml
egui_inspect_derive/src/: lib.rs  utils.rs
